Creando el formulario de Gastos / incorporando algo al CSS (106)

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,7 @@ header h1 {
     border-radius: 1rem;
     text-align: center;
     background-color: var(--gris-claro);
+    text-transform: capitalize;
 }
 
 .alerta {
