Cambiando la apariencia de Presupuesto diponible si ya fue sobrepasado (132)

--- a/src/index.css
+++ b/src/index.css
@@ -209,7 +209,8 @@ header h1 {
 }
 .contenido-presupuesto p.negativo,
 .contenido-presupuesto p.negativo span {
-    color: red;
+    color: #dc2626;
+    text-decoration: underline;
 }
 .contenido-presupuesto span {
     font-weight: 900;
